# bab

./: .gitignore  Cargo.toml  README.md  bab.example.toml  deny.toml
.github/workflows/: ci.yml
apps/macos/: build.sh
apps/macos/Sources/: TerminalView.swift  TerminalWindow.swift  main.swift
crates/bab-config/: Cargo.toml
crates/bab-config/src/: color.rs  lib.rs
crates/bab-config/tests/: config.rs  example.rs
crates/bab-input/: Cargo.toml
crates/bab-input/src/: key.rs  keyboard.rs  lib.rs  mouse.rs
crates/bab-input/tests/: encoding.rs
crates/bab-pty/: Cargo.toml
crates/bab-pty/src/: lib.rs  pty.rs  session.rs
crates/bab-pty/tests/: session.rs
crates/bab-render/: Cargo.toml
crates/bab-render/examples/: screenshot.rs  shell.rs
crates/bab-render/src/: atlas.rs  lib.rs  palette.rs  raster.rs  renderer.rs  shader.wgsl  target.rs
crates/bab-render/tests/: offscreen.rs
crates/bab-text/: Cargo.toml
crates/bab-text/src/: face.rs  layout.rs  lib.rs  shaper.rs
crates/bab-text/tests/: shaping.rs
crates/bab-vt/: Cargo.toml
crates/bab-vt/src/: attrs.rs  cell.rs  grid.rs  lib.rs  modes.rs  selection.rs  sgr.rs  term.rs  width.rs
crates/bab-vt/tests/: clusters.rs  screen.rs  selection.rs  viewport.rs  vt.rs  wcwidth.rs
crates/libbab/: Cargo.toml
crates/libbab/include/: bab.h
crates/libbab/src/: ffi.rs  lib.rs  terminal.rs
