[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/ebnsina/bab"

[workspace.dependencies]
bab-vt = { path = "crates/bab-vt" }

anyhow = "1"
portable-pty = "0.9"
unicode-segmentation = "1.12"
unicode-width = "0.2"
vte = "0.15"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
