[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/ebnsina/bab"

[workspace.dependencies]
bab-config = { path = "crates/bab-config" }
bab-input = { path = "crates/bab-input" }
bab-pty = { path = "crates/bab-pty" }
bab-render = { path = "crates/bab-render" }
bab-text = { path = "crates/bab-text" }
bab-vt = { path = "crates/bab-vt" }

anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
etagere = "0.3"
harfrust = "0.12"
pollster = "0.4"
portable-pty = "0.9"
skrifa = "0.44"
swash = "0.2"
unicode-properties = { version = "0.1", features = ["general-category"] }
unicode-segmentation = "1.12"
unicode-width = "0.2"
vte = "0.15"
wgpu = "30"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
