[package]
name = "bab-config"
description = "User configuration for bab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[lints]
workspace = true
