[package]
name = "bab-render"
description = "GPU glyph renderer for the terminal grid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bab-text.workspace = true
bab-vt.workspace = true
bytemuck.workspace = true
etagere.workspace = true
pollster.workspace = true
swash.workspace = true
wgpu.workspace = true

[dev-dependencies]
bab-pty.workspace = true
png = "0.18"

[lints]
workspace = true
