[package]
name = "bab-vt"
description = "Grapheme-cluster-aware terminal grid and VT state machine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unicode-segmentation.workspace = true
unicode-width.workspace = true
vte.workspace = true

[dev-dependencies]
unicode-width.workspace = true

[lints]
workspace = true
